removed code related to old initramfs generator